# foot

./: .gitignore  ANALYSIS_FLOW_UI.md  APPLICATION_SCREEN_MOCKUP.md  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  BUILD_WINDOWS.md  CHANGES.md  CMakeLists.txt  CMakeLists_Viewer.txt  COMPLETION_REPORT.md  COMPLETION_SUMMARY_完成總結.md  DASHBOARD_LAYOUT.md  DATA_EXPORT_GUIDE.md  DATA_EXPORT_GUIDE_ZH.md  EXAMPLE_BUTTON_LOGIC.cpp  FootAnalysisGUI.pro  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TWO_COLUMN.md  LOG_SECTION_RESTRUCTURE.md  MODERN_STYLING.md  MainWindow.cpp  MainWindow.h  PROJECT_SUMMARY.md  QT_CREATOR_SETUP.md  QT_CREATOR_SETUP_ZH.md  QT_GUI_GUIDE.md  QT_GUI_GUIDE_ZH.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_EN.md  README_GUI.md  README_ZH.md  RESPONSIVE_LAYOUT.md  SOLUTION_SUMMARY.md  TWO_COLUMN_LAYOUT.md  TWO_COLUMN_LAYOUT_VISUAL.txt  UI_DESIGN.md  UI_IMPROVEMENT_SUMMARY.md  UI_LAYOUT_IMPROVEMENTS.md  (+30 more)
foot-Function/: GUI_USER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE_整合指南.md  QT_CREATOR_GUIDE.md  QT_UI_README.md  football_analysis_ui.ui  generate_test_data.py  generate_ui_mockup.py  gui.py  main.py  qt_creator_info.txt  qt_ui_app.py  qt_ui_app_from_designer.py  requirements.txt  run_analysis_with_ui.py  run_gui.bat  run_gui.sh  test_gui.py  test_qt_ui.py
foot-Function/camera_movement_estimator/: camera_movement_estimator.py
foot-Function/output_videos/: data_output.csv  output.avi  (+4 more)
speed_and_distance_estimator/: speed_and_distance_estimator.py
utils/: __init__.py  bbox_utils.py  data_export.py  data_output.py  video_utils.py
(+8 files in other folders)
